--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -4,4 +4,6 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p><strong>Aluno: </strong>@ViewData["Aluno"]</p>
+
+<address><strong>More Information:</strong> @ViewData["Email"] </address>
